--- a/index.html
+++ b/index.html
@@ -3,29 +3,143 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Admin Dashboard</title>
+    <title>Document</title>
     <style>
+      .container {
+        display: grid;
+        grid-template-columns: 1fr 4fr;
+        grid-template-rows: 1fr 4fr;
+      }
       header {
         background-color: lightblue;
-        grid-column: 1/-1;
+        grid-column: 2/-1;
       }
+
       sidebar {
-        background-color: lightgrey;
+        background-color: lightgray;
+
+        grid-row: 1/-1;
+        grid-column: 1;
+        display: flex;
+        flex-direction: column;
+      }
+      sidebar > div {
+        padding: 3em 1em;
       }
       main {
         background-color: lightpink;
-      }
-      .container {
         display: grid;
-        grid-template: 1fr 3fr/ 200px 1fr;
+        grid-template-columns: 3fr 1fr;
+      }
+      .projects {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 10px;
+      }
+      .project-card {
+        background-color: rgb(75, 139, 139);
       }
     </style>
   </head>
   <body>
     <div class="container">
       <header>a</header>
-      <sidebar>b</sidebar>
-      <main>c</main>
+      <sidebar>
+        <div clas="dashboard">a</div>
+        <div clas="dashboard-info">b</div>
+        <div class="dashboard-settings">c</div></sidebar
+      >
+      <main>
+        <div class="project-container">
+          <h3>projects</h3>
+          <div class="projects">
+            <div class="project-card">
+              random project
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Provident asperiores quisquam cum quam unde optio expedita iusto
+                amet hic et, doloribus sequi beatae soluta eaque voluptatum quae
+                nesciunt non placeat!
+              </p>
+            </div>
+            <div class="project-card">
+              random project
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Provident asperiores quisquam cum quam unde optio expedita iusto
+                amet hic et, doloribus sequi beatae soluta eaque voluptatum quae
+                nesciunt non placeat!
+              </p>
+            </div>
+            <div class="project-card">
+              random project
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Provident asperiores quisquam cum quam unde optio expedita iusto
+                amet hic et, doloribus sequi beatae soluta eaque voluptatum quae
+                nesciunt non placeat!
+              </p>
+            </div>
+            <div class="project-card">
+              random project
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Provident asperiores quisquam cum quam unde optio expedita iusto
+                amet hic et, doloribus sequi beatae soluta eaque voluptatum quae
+                nesciunt non placeat!
+              </p>
+            </div>
+            <div class="project-card">
+              random project
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Provident asperiores quisquam cum quam unde optio expedita iusto
+                amet hic et, doloribus sequi beatae soluta eaque voluptatum quae
+                nesciunt non placeat!
+              </p>
+            </div>
+            <div class="project-card">
+              random project
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Provident asperiores quisquam cum quam unde optio expedita iusto
+                amet hic et, doloribus sequi beatae soluta eaque voluptatum quae
+                nesciunt non placeat!
+              </p>
+            </div>
+            <div class="project-card">
+              random project
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Provident asperiores quisquam cum quam unde optio expedita iusto
+                amet hic et, doloribus sequi beatae soluta eaque voluptatum quae
+                nesciunt non placeat!
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="left-sidebar">
+          <div class="announcement">
+            <h3>announcement</h3>
+            <div class="annoucement-card">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Consequatur placeat debitis repellat numquam voluptate quisquam
+              adipisci voluptas qui id! Doloremque maiores in voluptates
+              cupiditate, libero assumenda tempora cumque modi iste?
+            </div>
+          </div>
+          <div class="trending">
+            <h3>trending</h3>
+            <div class="trending-card">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus
+              quam dolores quas sed voluptatem cum? Omnis nostrum dolor
+              obcaecati minus repellat quisquam, nulla similique sequi magni,
+              blanditiis laudantium pariatur possimus.
+            </div>
+          </div>
+        </div>
+      </main>
     </div>
   </body>
 </html>
