--- a/index.html
+++ b/index.html
@@ -4,57 +4,105 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      .container {
-        display: grid;
-        grid-template-columns: 1fr 4fr;
-        grid-template-rows: 1fr 4fr;
-      }
-      header {
-        background-color: lightblue;
-        grid-column: 2/-1;
-      }
-
-      sidebar {
-        background-color: lightgray;
-
-        grid-row: 1/-1;
-        grid-column: 1;
-        display: flex;
-        flex-direction: column;
-      }
-      sidebar > div {
-        padding: 3em 1em;
-      }
-      main {
-        background-color: lightpink;
-        display: grid;
-        grid-template-columns: 3fr 1fr;
-      }
-      .projects {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 10px;
-      }
-      .project-card {
-        background-color: rgb(75, 139, 139);
-      }
-    </style>
+    <link rel="stylesheet" href="./styles/main.css" />
+    <link rel="stylesheet" href="./styles/sidebar.css" />
+    <link rel="stylesheet" href="./styles/general.css" />
+    <link rel="stylesheet" href="./styles/header.css" />
   </head>
   <body>
     <div class="container">
-      <header>a</header>
+      <header>
+        <div class="top-section header">
+          <div class="top-left header-flex">
+            <div class="icon">
+              <svg
+                class="dashboard-svg"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+              >
+                <title>magnify</title>
+                <path
+                  d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
+                />
+              </svg>
+            </div>
+            <input type="search" id="search" />
+          </div>
+          <div class="top-right header-flex">
+            <div class="icon">
+              <svg
+                class="dashboard-svg"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+              >
+                <title>bell-ring-outline</title>
+                <path
+                  d="M10,21H14A2,2 0 0,1 12,23A2,2 0 0,1 10,21M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M17,11A5,5 0 0,0 12,6A5,5 0 0,0 7,11V18H17V11M19.75,3.19L18.33,4.61C20.04,6.3 21,8.6 21,11H23C23,8.07 21.84,5.25 19.75,3.19M1,11H3C3,8.6 3.96,6.3 5.67,4.61L4.25,3.19C2.16,5.25 1,8.07 1,11Z"
+                />
+              </svg>
+            </div>
+            <div class="profile-card">
+              <img src="./images/channel-1.jpeg" alt="profile of first page" />
+            </div>
+            <div class="description">
+              <h3>MKBHD</h3>
+            </div>
+          </div>
+        </div>
+        <div class="bottom-section header">
+          <div class="bottom-left header-flex">
+            <div class="main-profile">
+              <img src="./images/channel-1.jpeg" alt="profile of first page" />
+            </div>
+            <div class="description">
+              <span>@MKBHD</span>
+              <p>Mobile app project</p>
+            </div>
+          </div>
+          <div class="bottom-right header-flex">
+            <button>New</button><button>upload</button><button>Share</button>
+          </div>
+        </div>
+      </header>
       <sidebar>
-        <div clas="dashboard">a</div>
-        <div clas="dashboard-info">b</div>
-        <div class="dashboard-settings">c</div></sidebar
+        <div clas="dashboard">
+          <div class="icon">
+            <svg
+              class="dashboard-svg"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+            >
+              <title>view-dashboard</title>
+              <path
+                d="M13,3V9H21V3M13,21H21V11H13M3,21H11V15H3M3,13H11V3H3V13Z"
+              />
+            </svg>
+          </div>
+          <span> Dashboard</span>
+        </div>
+        <div clas="dashboard-info">
+          <ul>
+            <li>Home</li>
+            <li>Profile</li>
+            <li>Messages</li>
+            <li>Tasks</li>
+            <li>Community</li>
+          </ul>
+        </div>
+        <div class="dashboard-settings">
+          <ul>
+            <li>Settings</li>
+            <li>Support</li>
+            <li>Privacy</li>
+          </ul>
+        </div></sidebar
       >
       <main>
         <div class="project-container">
-          <h3>projects</h3>
+          <h2>My Projects</h2>
           <div class="projects">
             <div class="project-card">
-              random project
+              <p class="project-title">random project</p>
               <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                 Provident asperiores quisquam cum quam unde optio expedita iusto
@@ -63,7 +111,7 @@
               </p>
             </div>
             <div class="project-card">
-              random project
+              <p class="project-title">random project</p>
               <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                 Provident asperiores quisquam cum quam unde optio expedita iusto
@@ -72,7 +120,7 @@
               </p>
             </div>
             <div class="project-card">
-              random project
+              <p class="project-title">random project</p>
               <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                 Provident asperiores quisquam cum quam unde optio expedita iusto
@@ -81,7 +129,7 @@
               </p>
             </div>
             <div class="project-card">
-              random project
+              <p class="project-title">random project</p>
               <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                 Provident asperiores quisquam cum quam unde optio expedita iusto
@@ -90,7 +138,7 @@
               </p>
             </div>
             <div class="project-card">
-              random project
+              <p class="project-title">random project</p>
               <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                 Provident asperiores quisquam cum quam unde optio expedita iusto
@@ -99,7 +147,7 @@
               </p>
             </div>
             <div class="project-card">
-              random project
+              <p class="project-title">random project</p>
               <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                 Provident asperiores quisquam cum quam unde optio expedita iusto
@@ -108,7 +156,7 @@
               </p>
             </div>
             <div class="project-card">
-              random project
+              <p class="project-title">random project</p>
               <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                 Provident asperiores quisquam cum quam unde optio expedita iusto
@@ -122,20 +170,75 @@
         <div class="left-sidebar">
           <div class="announcement">
             <h3>announcement</h3>
-            <div class="annoucement-card">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              Consequatur placeat debitis repellat numquam voluptate quisquam
-              adipisci voluptas qui id! Doloremque maiores in voluptates
-              cupiditate, libero assumenda tempora cumque modi iste?
+            <div class="announcement-card card">
+              <p class="project-title">random project</p>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Provident asperiores quisquam cum quam unde optio expedita iusto
+                amet hic et, doloribus sequi beatae soluta eaque voluptatum quae
+                nesciunt non placeat!
+              </p>
+              <hr />
+              <p class="project-title">random project</p>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Provident asperiores quisquam cum quam unde optio expedita iusto
+                amet hic et, doloribus sequi beatae soluta eaque voluptatum quae
+                nesciunt non placeat!
+              </p>
+              <hr />
+              <p class="project-title">random project</p>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Provident asperiores quisquam cum quam unde optio expedita iusto
+                amet hic et, doloribus sequi beatae soluta eaque voluptatum quae
+                nesciunt non placeat!
+              </p>
             </div>
           </div>
           <div class="trending">
-            <h3>trending</h3>
-            <div class="trending-card">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus
-              quam dolores quas sed voluptatem cum? Omnis nostrum dolor
-              obcaecati minus repellat quisquam, nulla similique sequi magni,
-              blanditiis laudantium pariatur possimus.
+            <h3>Trending</h3>
+            <div class="trending-card card">
+              <div class="profile-card">
+                <img
+                  src="./images/channel-1.jpeg"
+                  alt="profile of first page"
+                />
+                <div class="description">
+                  <span>@MKBHD</span>
+                  <p>Mobile app project</p>
+                </div>
+              </div>
+              <div class="profile-card">
+                <img
+                  src="./images/channel-2.jpeg"
+                  alt="profile of second page"
+                />
+                <div class="description">
+                  <span>@Markiplier</span>
+                  <p>Admin Dashboard Project</p>
+                </div>
+              </div>
+              <div class="profile-card">
+                <img
+                  src="./images/channel-3.jpeg"
+                  alt="profile of first page"
+                />
+                <div class="description">
+                  <span>@SSSniperWolf</span>
+                  <p>super cool project</p>
+                </div>
+              </div>
+              <div class="profile-card">
+                <img
+                  src="./images/channel-6.jpeg"
+                  alt="profile of first page"
+                />
+                <div class="description">
+                  <span>@Mrbeast600</span>
+                  <p>Money making app</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
